# MortgageBonuses

./: .gitignore  PROYECTO_COMPLETO.md  README.md  RESUMEN_FINAL.md  TECHNICAL.md  examples.py  interactive.py  main.py  pyproject.toml  utils.py
.github/instructions/: instructions.instructions.md
docs/: ACTUALIZACION.md  ACTUALIZACION_FORMULAS.md  COMANDOS.md  CORRECCION_ANALISIS_INDIVIDUAL_SEGUROS.md  CORRECCION_DETALLADA_PASO_A_PASO.md  CORRECCION_FORMULAS.md  EXCEL_DINAMICO.md  GUIA_USO.md  README.md  VERSIONS.md
mortgage_calculator/: __init__.py  calculator.py  excel_generator.py  models.py
tests/: __init__.py  test_calculator.py
